--- a/inicio.html
+++ b/inicio.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script type="text/javascript" src="https://maps.google.com/maps/api/js?libraries=places"></script>
     <link href="https://fonts.googleapis.com/css?family=Denk+One" rel="stylesheet">
-    <link rel="stylesheet" href="bootstrap-4.1.1-dist (1)/css/bootstrap-grid.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"crossorigin="anonymous">
+    <link rel="stylesheet" href="bootstrap-4.1.1-dist (1)/css/bootstrap-grid.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="bootstrap-4.1.1-dist (1)/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/inicio.css">
 
@@ -18,14 +19,6 @@
     <div class="cabecera">
         <h1>FOODMAP</h1>
     </div>
-    <div class=container>
-        <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Busca tus lugares Favoritos" aria-label="Recipient's username" aria-describedby="button-addon2">
-            <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button" id="button-addon2">Buscar</button>
-            </div>
-        </div>
-    </div>
     <section class="container">
         <div class="row">
             <div class="col-md-12">
@@ -33,13 +26,28 @@
             </div>
         </div>
     </section>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-    <script src="assets/js/main.js"></script>
+    <section class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <select class="custom-select" required>
+                        <option value="">Busca cerca de ti</option>
+                        <option value="1">Cafe</option>
+                        <option value="2">Panaderia</option>
+                        <option value="3">Resturantes</option>
+                        <option value="4">Comida para llevar</option>
+                        <option value="5">Comida con Delivery</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+        <script src="assets/js/main.js"></script>
 </body>
 
 </html>
